Move clip button and blacklist

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -25,3 +25,13 @@
         }
     }
 }
+
+.btn-magni{
+    padding: 3px;
+
+    img{
+        width: 20px;
+        padding-right: 3px;
+        vertical-align: middle;
+    }
+}
