Branding in the compose view and extension icon

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -36,6 +36,11 @@
     }
 }
 
+.magni-status-view {
+    background-position: right center;
+    background-repeat: no-repeat;
+}
+
 .magni-compose-view {
     padding: 0 5px;
     font-size: 80%;
